--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -85,12 +85,14 @@
   <div class="row">
     <div class="col-12">
       <div class="outer">
-        <div class="inner">
+        <div class="inner" id="animate">
 
           <div class='flexed-element-container'>
             <div class="text col-12 col-md-6">
               <h3><small>Welcome to Chatapp</small></h3>
-              <p class='justify-center'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores alias quas sequi facilis tempore deleniti ipsam omnis recusandae veniam obcaecati soluta, blanditiis cupiditate sint sit optio quae? Neque, ducimus.</p>
+              <p class='justify-center'>
+                A place to chat with strangers, make friends. Join random chat rooms and  
+              </p>
               <div class="btn btn-dark" routerLink='/chat-dashboard'>Enter chat room</div>
             </div>
 
@@ -102,7 +104,7 @@
           <div class='flexed-element-container'>
             <div class="text col-12 order-md-2 col-md-6">
               <h3><small>Find Someone who has the same interest as you</small></h3>
-              <p class='justify-center'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores alias quas sequi facilis tempore deleniti ipsam omnis recusandae veniam obcaecati soluta, blanditiis cupiditate sint sit optio quae? Neque, ducimus.</p>
+              <p class='justify-center'>have a one to one chat with strangers who have same interest as you.</p>
             </div>
            
             <div class="pic col-12 order-md-1 col-md-6">
@@ -113,7 +115,7 @@
            <div class='flexed-element-container'>
             <div class="text col-12 col-md-6">
               <h3><small>Chat with strangers or friends online</small></h3>
-              <p class='justify-center'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores alias quas sequi facilis tempore deleniti ipsam omnis recusandae veniam obcaecati soluta, blanditiis cupiditate sint sit optio quae? Neque, ducimus.</p>
+              <p class='justify-center'>talk to random person or have a private chat with your friends</p>
             </div>
 
             <div class="pic col-12 col-md-6">
@@ -136,6 +138,13 @@
          
 
         </div>
+      </div>
+      
+      <div class="scroll-notify-left">
+        <span><i class='fa fa-arrow-left text-dark'></i></span>
+      </div>
+      <div class="scroll-notify-right">
+         <span><i class="fa fa-arrow-right text-dark"></i></span>
       </div>
     </div>
   </div>
