--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -5,6 +5,9 @@
 
 }
 
+h2 {
+    letter-spacing: 2px;
+}
 .row{
   
     display:flex;
@@ -55,6 +58,8 @@ input[type='file']{
 }
 .form-control{
     text-align: center;
+    letter-spacing: 1px;
+
 }
 option {
     text-align:center;
@@ -83,14 +88,14 @@ option {
 }
 
 .btn-save {
-    box-shadow:3px 3px 5px rgba(0,0,0,0.6);
+    box-shadow:3px 3px 5px rgba(0,0,0,0.2);
     transition:0.1s;
     
 }
 
 .btn-save:hover {
     transform: scale(1.047);
-    box-shadow:3px 3px 6px rgba(0,0,0,0.5);
+    box-shadow:2px 2px 6px rgba(0,0,0,0.5);
 }
 .btn-save:hover span{
     transition: 0s;
