--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -29,14 +29,17 @@ input.ng-invalid{
     height:100%;
 
 }
-
+h2 {
+    letter-spacing: 2px;
+}
 .signup-form-container{
     max-height:100%;
     width:80%;
     text-align:center;
-    padding:10px 30px;
+    padding:15px 30px;
     background:white;
-
+    border-radius: 10px;
+    box-shadow: 5px 5px 9px rgba(0,0,0,0.1);
 
 }
 
@@ -46,13 +49,16 @@ input.ng-invalid{
 }
 
 .form-group{
-    padding:4px;
+    padding:4px 5px;
     margin:0px;
 }
 .form-label{
     width:100%;
-    margin:2px;
+    margin:5px 0px;
     padding:0px;
+}
+button{
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
 }
 
 .signup-form-container form .form-control{
@@ -75,6 +81,11 @@ input.ng-invalid{
     
 
 }
+input {
+    padding:3px 10px;
+    font-size:19px;
+    letter-spacing:1px;
+}
 .picturebox .img img{
     width:100%;
     height:100%;
@@ -84,9 +95,17 @@ input.ng-invalid{
     outline:none !important;
 }*/
 
+.btn{
+    letter-spacing: 2px !important;
+    font-size: 18px !important;
+}
+
 @media screen and (max-width:600px){
     .picturebox .img{
         display:none;
+    }
+    .container-fluid{
+        margin:0px;
     }
     .row{
         height:unset;
@@ -104,8 +123,12 @@ input.ng-invalid{
     }
     .signup-form-container{
         width:100%;
-        padding:20px 10px;
+        margin-top:30px;
+        padding:20px 5px;
+        border-radius: unset;
+        box-shadow: none;
+        transform: scale(1)
     }
-
+    
     
 }
