--- a/src/app/secondheader/secondheader.component.html
+++ b/src/app/secondheader/secondheader.component.html
@@ -5,7 +5,7 @@
             <ul class='nav py-2'>
                 <div>
                 <li class='nav-item' routerLink='/home'>home</li>
-                <li class='nav-item' routerLink='/contact'>contact</li>
+                <li class='nav-item' routerLink='/contact-us'>contact</li>
                 <li class='nav-item' routerLink='/about'>about us</li>
                 </div>
                 
