--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-
+<div class="show-spinner">
+    <img src="../../assets//icons/Discuss-1s-200px (2).png" class='chat-spinner' alt="">
+</div>
      <div class="header">
      <app-header></app-header>
      </div>
