--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -93,7 +93,7 @@
               <p class='justify-center'>
                 A place to chat with strangers, make friends. Join random chat rooms and  
               </p>
-              <div class="btn btn-dark" routerLink='/chat-dashboard'>Enter chat room</div>
+              <div class="btn btn-dark mb-3 ld ld-wander-v" style='animation-duration: 3s;' routerLink='/chat-dashboard'>Enter chat room</div>
             </div>
 
             <div class="pic col-12 col-md-6">
@@ -124,11 +124,11 @@
            </div>
            
            <div class='flexed-element-container'>
-            <div class="text col-12 order-md-2 col-md-6">
+            <div class="text col-12 order-md-2 col-md-6 mb-3">
               <h3><small>Register to Start conversations</small></h3>
-              <p class='justify-center'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores alias quas sequi facilis tempore deleniti ipsam omnis recusandae veniam obcaecati soluta, blanditiis cupiditate sint sit optio quae? Neque, ducimus.</p>
+              <p class='justify-center'>click on Login to enter the chat dashboard or sign up button to register an account.</p>
               <div class="btn border-success px-4 mr-2" routerLink='/login'> login </div>
-               <div class="btn btn-dark px-3" routerLink='/sign-up'> Sign up</div>
+              <div class="btn btn-dark px-3" routerLink='/sign-up'> Sign up</div>
             </div>
 
             <div class="pic col-12 order-md-1 col-md-6">
