--- a/src/app/messagearea/messagearea.component.css
+++ b/src/app/messagearea/messagearea.component.css
@@ -28,8 +28,8 @@ ul {
 }
 ::-webkit-scrollbar{
     width:0px;
-
 }
+
 .logo{
     color:white;
     padding:10px 20px;
@@ -167,6 +167,7 @@ ul {
   flex-flow: row wrap;
   align-content: flex-start;
   flex: 1;
+  scrollbar-width: none;
 }
 
 .message-box-holder {
