--- a/src/app/messagearea/messagearea.component.html
+++ b/src/app/messagearea/messagearea.component.html
@@ -4,13 +4,13 @@
 <div class="chatbox-holder">
     <div class="chatbox">
       <div class="chatbox-top">
-        <div class="chatbox-avatar" [style]='{display:group?"none":""}'>
-          <a target="_blank" href="https://www.facebook.com/mfreak"><img src="https://gravatar.com/avatar/2449e413ade8b0c72d0a15d153febdeb?s=512&d=https://codepen.io/assets/avatars/user-avatar-512x512-6e240cf350d2f1cc07c2bed234c3a3bb5f1b237023c204c782622e80d6b212ba.png" /></a> 
+        <div class="chatbox-avatar" [style]='{display:group?"":""}'>
+          <a target="_blank" [href]="roomPic"><img [src]="roomPic" /></a> 
         </div>
-        <div class="chat-partner-name" [style]='{display:group?"none":""}'>
-          <span class="status online"></span>
-          <a target="_blank" href="https://www.facebook.com/mfreak"> Mamun Khandakery</a>
-        </div>
+        <div class="chat-partner-name" [style]='{display:group?"":""}'>
+          <a  href="#" (click)="showGroupMenu()"> {{chat_name}}</a> &nbsp;
+          <span class="status online"></span> {{ roomMembers }}
+        </div> 
         <div class="chatbox-icons">
           <!--<a href="javascript:void(0);"><i class="fa fa-minus"></i></a>-->
           <a (click)="performExit()"><i class="fa fa-close">&nbsp; Exit</i></a>
@@ -18,6 +18,13 @@
       </div>
       
       <div class="chat-messages">
+        <div class="menu">
+          <div class="details" style='display:none'>
+             <h5><small>Group Name: </small></h5>
+             <h5><small>Group </small></h5>
+          </div>
+        </div>
+        <h5 class='text-center mb-2' style='width:100vw;'><small>Room Code : {{ roomCode }}</small></h5>
         <h5 class='text-center mb-2' style='width:100vw;'><small>start messaging...</small></h5>
 
         <div class="message-box-holder" *ngFor="let message of messageList">
