--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -91,9 +91,9 @@
             <div class="text col-12 col-md-6">
               <h3><small>Welcome to Chatapp</small></h3>
               <p class='justify-center'>
-                A place to chat with strangers, make friends. Join random chat rooms and  
+                A place to chat with strangers, make friends. Join random chat rooms and or create a public or private chat room. 
               </p>
-              <div class="btn btn-dark mb-3 ld ld-wander-v" style='animation-duration: 3s;' routerLink='/chat-dashboard'>Enter chat room</div>
+              <div class="btn btn-dark mb-3" style='animation-duration: 3s;' routerLink='/chat-dashboard'>Enter chat room</div>
             </div>
 
             <div class="pic col-12 col-md-6">
@@ -140,12 +140,12 @@
         </div>
       </div>
       
-      <div class="scroll-notify-left">
+      <!--<div class="scroll-notify-left">
         <span><i class='fa fa-arrow-left text-dark'></i></span>
       </div>
       <div class="scroll-notify-right">
          <span><i class="fa fa-arrow-right text-dark"></i></span>
-      </div>
+      </div>-->
     </div>
   </div>
 </div>
