--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6 login-box">
-            <div class="login-form-container">
+            <div class="login-form-container order-2 order-md-1">
                 <h2 class='text-center heading'><small>Login Please!</small></h2>
                 <form #loginform="ngForm" class='form' (ngSubmit)='onLogin()'>
     
@@ -23,7 +23,7 @@
             </div>
         </div>
         
-        <div class="col-md-6 picturebox">
+        <div class="col-md-6 order-1 order-md-2 picturebox">
             <div class="img">
                 <img src="..\..\assets\undraw_secure_login_pdn4.png" alt="computer and servers that represents unlock and lock">
             </div>
