--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -3,7 +3,7 @@
     overflow-y: auto;
 }
 
-.container, .row{
+.container-lg, .row{
     height:100%;
     position:relative;
 }
@@ -65,31 +65,55 @@ h3 {
     overflow: hidden;
     color:white;
 }
+.part  {
+    width:100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding:20px 0px;
+}
+.part .join-group{
+    width:42%;
+}
 
 .make-room:hover .text p {
-    
     background:peru !important;
 }
 
 .enter-room:hover .text p{
+    
     background: blueviolet !important;
+}
+@media screen and (max-width:900px){
+     .category-container{
+         width:100%;
+     }
+    .part{
+        flex-direction: column;
+    }
+    .part .join-group{
+        width:80%;
+    }
 }
 
 @media screen and (max-width:600px){
-    
-    .container, .row{
-        width:100%;
+    .container-lg, .row{
         padding:0px;
+    }
+    .part {
+        width:100%;
+        padding:20px 0px;
+        padding-top:0px;
         margin:0px;
-        height:unset;
-        min-height:100vh;
     }
     .join-group{
         
-       width:90%;
+       width:80%;
     }
     .join-group .text p{
         text-align: center;
         letter-spacing: 0px;
     }
+   
 }
