--- a/src/app/chatzone/chatzone.component.css
+++ b/src/app/chatzone/chatzone.component.css
@@ -4,7 +4,12 @@
 }
 
 .main{
-    height:100%;
+    height:100vh;
+    width:100%;
     overflow-y:auto;
+}
+
+@media screen and (max-width:900px){
+    
 }
 
