--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 top-header py-1 bg-light text-dark">
-            <div class="logo"><h3><small>Chating App</small></h3></div>
+            <div class="logo"><h3><small>ChatApp</small></h3></div>
             <div class="text">
                 <span class='badge badge-pill mt-1 badge-pill-small bg-success'>&nbsp;</span><i>meet stranges online</i>
             </div>
