--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -70,7 +70,7 @@
     width:100%;
     height:100%;
     margin:0;
-    background:whitesmoke;
+    background:white;
     position:relative;
    
 }
@@ -155,8 +155,24 @@
 }
 .inner .flexed-element-container .pic img{
      width:100%;
-     box-shadow: 3px 3px 9px rgba(0,0,0,0.1);
-     
+     animation: float 3s infinite ease-in-out;
+}
+@keyframes float{
+    0%{
+        transform: translateY(0px);
+    }
+    25%{
+        transform: translateY(5px);
+    }
+    50%{
+        transform: translateY(-5px)
+    }
+    75%{
+        transform:translateY(-5px)
+    }
+    99%{
+    
+    }
 }
 
 #piclast{
@@ -226,11 +242,10 @@
 .inner .flexed-element-container .pic img{
      width:100%;
      height:100%;
+     animation:none;
      
 }
 
-#piclast{
-    width:100%;
-}
+
 
 }
