--- a/src/app/secondheader/secondheader.component.css
+++ b/src/app/secondheader/secondheader.component.css
@@ -15,6 +15,7 @@
 
 .second-header ul div li:hover{
     background:green;
+    cursor: pointer;
 }
 .second-header ul div li:visited{
     border: 1px solid white;
@@ -50,6 +51,7 @@
     }
     .second-header ul div li:hover{
         background:green;
+      
     }
 
 }
