--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -30,15 +30,20 @@ input.ng-invalid{
 
 }
 h2 {
+    
     letter-spacing: 2px;
+    font-size:40px;
+    font-weight: normal;
+    text-shadow: 3px 3px 3px rgba(0,0,0,0.2);
 }
 .signup-form-container{
     max-height:100%;
     width:80%;
     text-align:center;
     padding:15px 30px;
-    background:white;
     border-radius: 10px;
+    border-top:4px solid whitesmoke;
+    border-left:4px solid whitesmoke;
     box-shadow: 5px 5px 9px rgba(0,0,0,0.1);
 
 }
@@ -57,6 +62,7 @@ h2 {
     margin:5px 0px;
     padding:0px;
 }
+
 button{
     box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
 }
@@ -85,11 +91,30 @@ input {
     padding:3px 10px;
     font-size:19px;
     letter-spacing:1px;
+    border-radius: 5px;;
 }
 .picturebox .img img{
     width:100%;
     height:100%;
+    animation: float 3s infinite ease-in-out;
+}
+
+@keyframes float{
+    0%{
+        transform: translateY(0px);
+    }
+    25%{
+        transform: translateY(5px);
+    }
+    50%{
+        transform: translateY(-5px)
+    }
+    75%{
+        transform:translateY(-5px)
+    }
+    99%{
     
+    }
 }
 /*.form-control:focus{
     outline:none !important;
@@ -101,8 +126,14 @@ input {
 }
 
 @media screen and (max-width:600px){
+    .picturebox{
+        margin-top:50px;
+    }
     .picturebox .img{
-        display:none;
+        order:1;
+    }
+    .picturebox .img img{
+        animation:none;
     }
     .container-fluid{
         margin:0px;
@@ -113,21 +144,26 @@ input {
     }
 
     .signup-box{
+        order:2;
         display:flex;
         flex-direction: column;
         justify-content: center;
-        min-height:90vh;
+        margin-top:none;
     }
     .container-fluid{
-        overflow-y: scroll;
+        overflow-y: auto;
     }
     .signup-form-container{
         width:100%;
-        margin-top:30px;
-        padding:20px 5px;
+        margin-top:10px;
+        padding:10px 5px;
         border-radius: unset;
         box-shadow: none;
-        transform: scale(1)
+        border:none;
+    }
+
+    .form-control{
+        border-radius:5px;
     }
     
     
