--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div class=" container-lg">
     <div class="row">
         <div class="col-12 p-5 category-container">
-            <div class="join-group p-2 bg-dark ld ld-zoom-in" (click)="goToMessageArea()">
+            <div class="join-group p-2 bg-dark" (click)="goToMessageArea()">
                  <div class='headers'>
                      <h3>Join Group</h3>
                      <div class="arrow">
