--- a/src/app/verifyaccount/verifyaccount.component.html
+++ b/src/app/verifyaccount/verifyaccount.component.html
@@ -1,1 +1,2 @@
-<p>verifyaccount works!</p>
+<H1 class='verified noti' *ngIf='verified'>Account Verified</H1>
+<H1 class='not verified'  *ngIf='verified'>Account Not Verified</H1>
