--- a/src/app/searchrooms/searchrooms.component.css
+++ b/src/app/searchrooms/searchrooms.component.css
@@ -19,8 +19,6 @@ input{
     height: 12px;
     border-radius: 50%;
     display: inline-block;
-    position:absolute;
-    top:5px; right:5px;
     box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
     border: 1px solid rgba(0, 0, 0, 0.15);
     background: #cacaca;
@@ -80,17 +78,30 @@ form{
     width:50%;
      margin:20px auto;
 }
+
+.table-container{
+    width:100%;
+    overflow-x:auto;
+    padding:0px;
+}
+.table tbody:hover {
+    cursor: pointer;
+}
+
 @media screen and (max-width:700px){
     .container{
-        
-        width:100%;
+        display:inline-block;
+        max-width:100vw;
         min-height:100vh;
+        overflow-y: hidden;
     }
     .row{
+        max-width:100vw;
         height:100%;
     }
     form{
         width:80%;
+        margin:40px auto;
     }
     .rooms .room-indi h5, p{
         padding:2px 5px;
@@ -99,6 +110,10 @@ form{
     .rooms{
       width:100%;
       margin-bottom:10px;
+    }
+    .content{
+        width:80%;
+        margin:20px 0px;
     }
     .rooms .room-indi{
         width:100%;
@@ -119,5 +134,17 @@ form{
         font-size:30px;
         margin-top:60px !important;
     }
+    
+    .table-container{
+        width:100%;
+        overflow-x:auto;
+        box-sizing: content-box;
+    }
+
+
+    
+   
+
+   
 
 }
