--- a/src/app/searchrooms/searchrooms.component.html
+++ b/src/app/searchrooms/searchrooms.component.html
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-12 content">
             
-            <h1 class='mt-3 text-center'><small>All Chat Rooms : Total {{ room_list.length }} Available</small></h1>
-            <hr>
+            <!--<h1 class='mt-3 text-center'><small>All Chat Rooms : Total {{ room_list.length }} Available</small></h1>
+            <hr>-->
             <form action=""  #searchForm='ngForm' class="form">
                 
                 <div class="form-group">
@@ -15,7 +15,7 @@
                 </div>
             </form>
             
-            <div class="rooms mt-4">
+            <!--<div class="rooms mt-4">
                 <div *ngFor="let room of room_list" class="room-indi bg-dark" (click)="goToRoom(room.roomCode)"  >
                     <span class="status online"></span>
                     <div class='left'>
@@ -32,7 +32,32 @@
                     
                     
                 </div>
-            </div>
+            </div>-->
+             <div class='table-container'>
+                <table class="table  table-striped table-dark">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col"></th>
+                    <th scope="col">Room Name</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">createdBy</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let room of room_list" (click)="goToRoom(room.roomCode)">
+                      <th scope="row"><span class="status online"></span></th>
+                      <td><img [src]="room.roomPic" style='width:30px;height:30px; border-radius: 50%;' alt=""></td>
+                      <td>{{ room.roomName }}</td>
+                      <td>{{ room.category }}</td>
+                      <td>{{ room.description }}</td>
+                      <td>{{ room.createdBy }}</td>
+                    </tr>
+                  </tbody>
+
+            </table>
+             </div>
         </div>
     </div>
 </div>
