--- a/src/app/messagearea/messagearea.component.css
+++ b/src/app/messagearea/messagearea.component.css
@@ -219,6 +219,19 @@ ul {
   right: 10px;
 }
 
+.message-box img {
+  width:200px;
+  height:200px;
+  cursor: pointer;
+}
+
+.message-box img:hover{
+  
+ width:300px;
+ height:300px;
+
+}
+
 .message-partner {
   /*background: rgba(0, 114, 135, .1);
   border: 2px solid rgba(0, 114, 135, .1);*/
@@ -374,6 +387,7 @@ ul {
 }
 
 @media screen and (max-width:600px){
+ 
     
    .outerlayer{
      height:100vh;
@@ -403,4 +417,25 @@ ul {
     .logo{
         display:none;
     }
+    .message-box .img:hover, .message-partner .img:hover{
+  
+      width:100%;
+      height:70%;
+      left:0%;
+      top:50%;
+      z-index:21;
+      transform:translateY(-50%);
+      background: rgba(0,0,0,0.4);
+      position: fixed;
+     }
+  
+     .message-box .img:hover img , .message-partner .img:hover img{
+       width:90%; 
+       height:50%;
+       position:absolute;
+       left:50%;
+       top:50%;
+       transform: translate(-50%, -50%);
+        
+     }
 }
