changes in forms

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -6,6 +6,10 @@
 .container-lg, .row{
     height:100%;
     position:relative;
+   
+}
+.row{
+    background:rgba(255,255,255,0.95);
 }
 .category-container{
     position:absolute;
