--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -2,9 +2,12 @@
     box-sizing: border-box;
     padding:0;
     overflow-x: hidden;
+    letter-spacing: 1px;
 
 }
-
+.container{
+    background:rgba(255,255,255,0.94);
+}
 h2 {
     letter-spacing: 2px;
 }
@@ -39,25 +42,23 @@ input[type='file']{
     border-radius: 50%;
 }
 .details{
- width:50%;
- margin-left:20px;
+ width:70%;
+ margin:0px auto;
  margin-top:20px;
 }
-.form-group{
-    margin:0;
-    
+.form-label{
+    width:100%;
 }
-
+.form-group{
+    margin:2px;
+}
 .form-control{
     padding:5px;
+    padding-left:10px;
     font-size:18px;
-}
-
-.form-label{
-    width:100% !important;
+    background:whitesmoke
 }
 .form-control{
-    text-align: center;
     letter-spacing: 1px;
 
 }
@@ -87,6 +88,7 @@ option {
     opacity:1;
 }
 
+
 .btn-save {
     box-shadow:3px 3px 5px rgba(0,0,0,0.2);
     transition:0.1s;
@@ -112,11 +114,12 @@ option {
         flex-direction: column;
     }
     .details{
-        width:70%;
+        width:87%;
         margin:20px 0px;
     }
     .form-control{
         text-align: center;
+
     }
     .profile-pic{
         width:180px;
