--- a/src/app/searchrooms/searchrooms.component.css
+++ b/src/app/searchrooms/searchrooms.component.css
@@ -1,7 +1,10 @@
 *{
     box-sizing: border-box;
 }
-
+.container {
+    background:rgba(255,255,255,0.96);
+    height:100%;
+}
 .rooms{
     width:100%;
     display:flex;
